Fixed banner overlap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,6 +109,7 @@ Grey: #D6D2C9
 
 body {
   margin: 0;
+  margin-top: 32px;
   background: #323032;
   color: #323032;
   font-family: 'Changa', sans-serif;
